<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pizz.wifibotcontroller.MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:text="@string/textViewMainSelectIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMainSelectIP"
        android:textSize="30sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextMainGetIP"
        android:textSize="20sp"
        android:hint="@string/editTextMainGetIPHint" />

    <Button
        android:text="@string/buttonMainConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMainConnexion"
        android:textSize="20sp"
        android:background="@drawable/button_pressed_background"/>
</LinearLayout>
